--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 <title>Entreprise Confort Moderne</title>
 
 <style>
@@ -44,7 +43,7 @@ body {
   url('https://images.unsplash.com/photo-1503387762-592deb58ef4e');
   background-size: cover;
   background-position: center;
-  color: white;
+  color: blue;
   text-align: center;
   padding: 120px 20px;
 }
@@ -228,74 +227,75 @@ form button:hover {
 <div class="navbar">
   <div class="logo">Entreprise Confort Moderne</div>
   <div>
-    <a href="#">الرئيسية</a>
-    <a href="#">خدماتنا</a>
-    <a href="#">اتصل بنا</a>
+    <a href="#">Accueil</a>
+    <a href="#">Nos services</a>
+    <a href="#">Nous contacter</a>
   </div>
 </div>
 
 <section class="contact">
-  <h2>اتصل بنا</h2>
+  <h2>Contactez nous</h2>
+
 
 <div class="hero">
 <section class="services">
-  <h2>خدماتنا</h2>
+  <h2>Nos services</h2>
 
   <div class="cards">
 
     <div class="card">
-      <h3>التكييف والتبريد</h3>
-      <p>تركيب وصيانة جميع أنظمة التكييف باحترافية.</p>
+      <h3>climatisation centralisee</h3>
+      <p>Installation et entretien professionnels de tous les systemesde climatisation</p>
     </div>
 
     <div class="card">
-      <h3>السباكة الحديثة</h3>
-      <p>حلول متكاملة لأعمال السباكة المنزلية والصناعية.</p>
+      <h3>Travaux et realisation plomberie sanitaire moderne & chauffage centrale et par le sol</h3>
+      <p>Solutions integrees pour les travaux de plomberie residentielle et industrielle</p>
     </div>
 
     <div class="card">
-      <h3>الكهرباء العامة</h3>
-      <p>تركيب وصيانة الأنظمة الكهربائية بأعلى معايير الأمان.</p>
+      <h3>Electricite genérale cablage des armoire de regulation</h3>
+      <p>Installation et maintenance des systemes electriques conformement aux normes de securité les plus strictes</p>
     </div>
 
   </div>
 </section>
 
-  <h1>حلول عصرية للراحة الحديثة</h1>
-  <p>خبرة وجودة في تقديم أفضل الخدمات</p>
-  <button onclick="alert('سيتم التواصل معك قريبًا')">
-    اطلب خدمة الآن
+  <h1>Des solutions modernes pour un confort moderne</h1>
+  <p>Experience et qualite dans la fourniture des meilleurs services</p>
+  <button onclick="alert('Vous serez contacté(e) prochainement')">
+    Demandez un service des maintenant
   </button>
 </div>
 
 <section class="testimonials">
-  <h2>آراء عملائنا</h2>
+  <h2>avis de nos clients</h2>
 
   <div class="testimonial-cards">
 
     <div class="testimonial">
-      <p>"خدمة ممتازة وسرعة في التنفيذ 👍"</p>
-      <h4>- أحمد</h4>
+      <p>"Service excellent et rapidité d'exécution 👍"</p>
+      <h4>- Ahmed</h4>
     </div>
 
     <div class="testimonial">
-      <p>"فريق محترف وتعامل راقي جدًا."</p>
-      <h4>- محمد</h4>
+      <p>"Une équipe professionnelle et un service très élégant"</p>
+      <h4>- Mouhamed hamadi Kooli</h4>
     </div>
 
     <div class="testimonial">
-      <p>"أنصح بهم بشدة، جودة عالية وأسعار مناسبة."</p>
-      <h4>- سمير</h4>
+      <p>"Je les recommande vivement haute qualité et prix raisonnables en adéquation avec la qualité"</p>
+      <h4>- Nadaa Ghozzi</h4>
     </div>
 
   </div>
 </section>
 
-  <form>
-    <input type="text" placeholder="الاسم الكامل" required>
-    <input type="email" placeholder="البريد الإلكتروني" required>
-    <textarea placeholder="اكتب رسالتك هنا..." required></textarea>
-    <button type="submit">إرسال</button>
+<form>
+    <input type="text" placeholder="nom et prénom" required>
+    <input type="email" placeholder="Email" required>
+    <textarea placeholder="Écrivez votre message ici" required></textarea>
+    <button type="submit">Envoyez</button>
   </form>
 </section>
 
