Refactor index.html structure and content

--- a/index.html
+++ b/index.html
@@ -158,36 +158,37 @@ button:hover {
 
 /* تصميم خاص بالهواتف */
 @media (max-width: 768px) {
-
-  .navbar {
+}
+  
+.navbar {
     flex-direction: column;
     text-align: center;
-  }
-
-  .navbar div {
-    margin-top: 10px;
-  }
-
-  .hero {
-    padding: 80px 15px;
-  }
-
-  .hero h1 {
-    font-size: 28px;
-  }
-
-  .cards,
-  .testimonial-cards {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .card,
-  .testimonial {
-    width: 90%;
-  }
-
 }
+  
+.navbar div {
+    margin-top: 10px;
+}  
+
+.hero {
+    padding: 80px 15px;
+}  
+
+.hero h1 {
+    font-size: 28px;
+}  
+
+.cards,
+.testimonial-cards {
+  flex-direction: column;
+  align-items: center;
+}
+
+ 
+.card,
+    testimonial {
+    width: 90%;
+}  
+
 
 .contact {
   padding: 60px 20px;
@@ -262,7 +263,9 @@ form button:hover {
 .whatsapp-float:hover {
   transform: scale(1.1);
 }
-
+  </style>
+{
+  
 </head>
 
 <body>
@@ -291,8 +294,8 @@ form button:hover {
   <div class="cards">
 
     <div class="card" data-aos="zoom-in">
-      <h3>Climatisation centralisée</h3>
-      <p>Installation et entretien professionnels de tous les systèmes de climatisation.</p>
+      <h3>Climatisation centralisee</h3>
+      <p>Installation et entretien professionnels de tous les systemes de climatisation.</p>
     </div>
 
     <div class="card" data-aos="zoom-in">
@@ -301,15 +304,11 @@ form button:hover {
     </div>
 
     <div class="card" data-aos="zoom-in">
-      <h3>Électricité générale</h3>
+      <h3>Electricité generale</h3>
       <p>Installation et maintenance conformes aux normes de sécurité.</p>
     </div>
 
-  </div>
-</section>    </div>
-
-  </div>
-</section>
+<section>
 
 <section class="testimonials" data-aos="fade-right">
   <h2>Avis de nos clients</h2>
@@ -359,9 +358,7 @@ form button:hover {
   <p>© 2026 Entreprise Confort Moderne - Tous droits réservés</p>
 </footer>
 
-<a href="https://wa.me/21655546639" class="whatsapp-float" target="_blank">
-   💬
-</a>
+<a href="https://wa.me/21655546639" class="whatsapp-float" target="_blank">💬</a>
 
 <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
 <script>
